demoK8s-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-paths

spec:
  ingressClassName: nginx
  rules:
    - host: alex.alex.net
      http:
        paths:
          - path: /fool/
            pathType: Prefix
            backend:
              service:
                name: service-fool
                port:
                  number: 8080
          - path: /friend/
            pathType: Prefix
            backend:
              service:
                name: service-friend
                port:
                  number: 8081
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: service-auth
                port:
                  number: 8080
